<resources>
    <string name="app_name">有鱼</string>

    <string name="share_err_ok">分享成功</string>
    <string name="share_err_comm">分享出错</string>
    <string name="share_err_user_cancel">取消分享</string>
    <string name="share_err_sent_failed">发送失败</string>
    <string name="share_err_auth_denied">认证失败</string>
    <string name="share_err_unsupport">不支持</string>
    <string name="share_err_unknow">未知错误</string>

    <string name="action_we_chat_login">微信登录</string>
    <string name="action_we_chat_share">微信分享</string>
    <string name="action_we_chat_pay">微信支付</string>
    <string name="action_nothing">nothing</string>
    <string name="title_activity_base_aty">BaseAty</string>
    <string name="title_activity_you_yu_aty">YouYuAty</string>

    <string name="home_community">社区</string>
    <string name="home_find">发现</string>
    <string name="home_message">消息</string>
    <string name="home_user">我的</string>
    
    <string name="recommend">推荐</string>
    <string name="newest">最新</string>
    <string name="follow">关注</string>
    <string name="news_flash">快讯</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
