<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/homepadding"
    android:paddingRight="@dimen/homepadding"
    >

    <android.support.v4.view.ViewPager
        android:id="@+id/homeViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/barLL"
        />
    <LinearLayout
        android:id="@+id/barLL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:id="@+id/community"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_community"
            android:textColor="@color/textColorSelected"
            />
        <TextView
            android:id="@+id/find"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_find"
            android:textColor="@color/textColorSelect"
            />
        <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_message"
            android:textColor="@color/textColorSelect"
            />
        <TextView
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_user"
            android:textColor="@color/textColorSelect"
            />

    </LinearLayout>

</RelativeLayout>
