<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/headView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <SearchView
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/recommend"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/recommend"
                android:gravity="center"
                android:textSize="@dimen/textsize16"
                />
            <TextView
                android:id="@+id/newest"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/newest"
                android:gravity="center"
                android:textSize="@dimen/textsize16"
                />
            <TextView
                android:id="@+id/follow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/follow"
                android:gravity="center"
                android:textSize="@dimen/textsize16"
                />
            <TextView
                android:id="@+id/news_flash"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/news_flash"
                android:gravity="center"
                android:textSize="@dimen/textsize16"
                />
        </LinearLayout>

        <View
            android:id="@+id/bar"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/communityViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headView"
        />
</RelativeLayout>
